--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 kotlin.code.style=official
 android.useAndroidX=true
+
+# fix https://github.com/ben-manes/gradle-versions-plugin/issues/859
+systemProp.javax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl
+systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
+systemProp.javax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
